--- a/public/pug/index.pug
+++ b/public/pug/index.pug
@@ -56,23 +56,25 @@ html(lang='en')
                 h3 Photography
                 p Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
         // end image chan
+        // start client testimonials
         section.clientTestimonials
             .container
                 .title
                     h3 CLIENT TESTIMONIALS
                 .persons
                     .person
-                        img(src="", alt="alt")
-                        p.resP We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+                        img(src="images/image-emily.jpg", alt="alt")
+                        p We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
                         h4 Emily R.
                         span Marketing Director
                     .person
-                        img(src="", alt="alt")
-                        p.resP Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+                        img(src="images/image-thomas.jpg", alt="alt")
+                        p Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
                         h4 Thomas S.
                         span Chief Operating Officer
                     .person 
-                        img(src="", alt="alt")
-                        p.resP Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+                        img(src="images/image-jennie.jpg", alt="alt")
+                        p Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
                         h4 Jennie F.
                         span Business Owner
+        // end client testimonials
