--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -74,7 +74,7 @@ header
                 &.contactBtn
                     padding: 20px 40px
                     border-radius: 40px
-                    background-color:  #fad400
+                    background-color: #fad400
                     color: #23303e
                     font-weight: 700
                     transition: all 0.5s ease
@@ -88,7 +88,7 @@ header
                 top: 0px
                 border-left: 50px solid transparent
                 border-right: 50px solid transparent
-                border-bottom:  50px solid white
+                border-bottom: 50px solid white
                 transform: rotate(-90deg)
         .content-part
             display: flex
@@ -109,17 +109,17 @@ header
                     font-size: 50px
                     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif
 @media (min-width: 992px) and (max-width: 1199px)
-    header 
-        .container 
-            .content-part 
-                .headerCont 
+    header
+        .container
+            .content-part
+                .headerCont
                     h1
                         font-size: 45px !important
 @media (max-width: 768px)
-    header 
-        .container 
-            .content-part 
-                .headerCont 
+    header
+        .container
+            .content-part
+                .headerCont
                     h1
                         font-size: 40px !important
 // end header
@@ -135,9 +135,9 @@ header
         &.imageStanOut
             background-image: url("../images/image-stand-out.jpg")
         &.textCont
-            padding: 80px
+            padding: 30px
             .h1
-                font-family: 'Fraunces', serif               
+                font-family: 'Fraunces', serif
                 font-size: 42px
                 font-weight: 900
                 color: #23303e
@@ -145,7 +145,7 @@ header
                 margin-bottom: 40px
                 margin-top: 0
             p
-                padding-right: 50px 
+                padding-right: 50px
                 font-family: 'Barlow', sans-serif
                 color: #818498
                 line-height: 29px
@@ -170,32 +170,40 @@ header
                         border-color: red
 
 @media (max-width: 890px) and (min-width: 362px)
-    .transform , .standOut    
+    .transform , .standOut
         .textCont
             height: 360px !important
+            .h1
+                margin-bottom: 10px !important
             p
-                margin-top: 50px !important
-
+                margin-top: 20px !important
 
 @media (max-width: 890px)
-    .transform , .standOut    
+    .transform , .standOut
         div
             width: 100%
             h2
                 margin-top: 0
                 margin-bottom: 35px !important
                 font-size: 35px !important
+                text-align: center
             p
                 padding: 0 !important
+                text-align: center
         .textCont
             a
                 margin: 0 auto !important
-            padding: 25px !important
-            height: 450px
-            text-align: center
+                padding: 25px !important
+                height: 450px
+                text-align: center
 
     .standOut
         flex-direction: column-reverse
+
+@media ( min-width: 1100px )
+    .textCont
+        padding: 120px !important
+    
 // end transform and stand out
 // strat image chan
 .imageChan
@@ -205,7 +213,7 @@ header
         padding: 270px 10% 0 20%
         text-align: center
         h3
-            font-family: 'Fraunces', serif   
+            font-family: 'Fraunces', serif
             font-weight: 900
             font-size: 30px
             color: #19536b
