--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -236,3 +236,13 @@ header
             height: 500px !important
             padding: 280px 10% 10%
 // end image chan
+// start client testimonials
+.clientTestimonials
+    padding: 100px 0
+    h3
+        text-align: center
+        font-family: "Times New Roman", Times, Baskerville, Georgia, serif
+        font-size: clamp(1rem , 0.00000001rem + 10vw , 2rem)
+        font-weight: 400
+        color: #a7abae
+// end client testimonials
