--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -1,6 +1,9 @@
 //start variable declaration
 @use 'tools/_var' as *
 //end variable declaration
+//start function declaration
+@use 'tools/function'
+//end function declaration
 // start importing fonts from google fonts
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,900&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap')
@@ -315,3 +318,34 @@ header
         div
             width: 50%
 // end image gallery
+// start footer
+footer
+    min-height: 450px
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: space-around
+    background-color: #4db39c
+    .icon
+        img
+            width: 200px
+    ul
+        width: 100%
+        max-width: 500px
+        justify-content: space-evenly !important
+        li
+            a
+                text-decoration: none
+                font-size: 30px
+                color: #25564b
+                font-weight: bolder
+                &:hover
+                    color: white
+    .social
+        min-height: 30px
+        width: 100%
+        max-width: 600px
+        display: flex
+        justify-content: space-evenly
+        img
+            width: 8%
